fixing icons on cover image on landing page - old icons had visible underlines inherited from <a> tags - icons were previously tied to a span class, when they should be attributes on the <a> tag. - span class now is used for text identification only - new style for social removes need for inlining

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -114,6 +114,12 @@ table { border-collapse: collapse; border-spacing: 0; }
   font-weight: normal; font-style: normal;
 }
 
+.social a {
+  color:white;
+  font-size:2em;
+  text-decoration: none;
+}
+
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
     font-family: "genericons", "Open Sans", sans-serif;
